--- a/poolcarz/src/app/bookride/bookride.component.html
+++ b/poolcarz/src/app/bookride/bookride.component.html
@@ -4,11 +4,11 @@
         <h6>Book a ride</h6>
         <p>Pool car is a online application which you can either book or book through an app.</p>
         <div>
-            <button type="button" class="btn btn-primary" (click) = "choose()">show all rides</button>
+            <button type="button" class="btn btn-primary" (click) = "rideList()">show all rides</button>
             <div *ngIf = "isUse" >
-                <button type="button" class="btn btn-primary" (click)="rideList()">To office</button>
-                <button type="button" class="btn btn-primary">From office</button>
-                <button type="button" class="btn btn-primary">other</button>
+                <button type="button" class="btn btn-primary" (click)="rideList('toOffice')">To office</button>
+                <button type="button" class="btn btn-primary"(click) ="rideList('fromOffice')" >From office</button>
+                <button type="button" class="btn btn-primary" (click) ="rideList('others')" >other</button>
             </div>
             <div  *ngIf = "isUse">
               <table >
@@ -21,7 +21,7 @@
                     </tr>
                 </thead>
                 <tbody >
-                    <tr appMouse *ngFor="let item of seatsList">
+                    <tr appMouse *ngFor="let item of seatsList" (click) = "rideOne()">
                       <td>{{item.id}}</td>
                         <td>{{ item.pickUp }}</td>
                         <td>{{ item.destination }}</td>
@@ -43,7 +43,7 @@
         <div>
             <button type="button" class="btn btn-primary">offer a ride</button>
         </div>
-       
+     <app-ride [rideCount]="ride" (cancel) = "cancelRide($event)"></app-ride>  
     </div>
 
 <!-- <h1> Example of Toggle a Div on Click on a Button using Angular </h1>  
