--- a/poolcarz/src/app/login/login.component.html
+++ b/poolcarz/src/app/login/login.component.html
@@ -1,11 +1,23 @@
 <html>
 <body>
-    <form>
+    <form [formGroup]="registerForm">
         <div class = "container">
             <label>Username : </label>   
-            <input type="text" placeholder="Enter Username" name="username" [(ngModel)] = "user[0].userName">  
+            <input type="text" placeholder="Enter Username" name="username" [(ngModel)] = "user[0].userName" formControlName="userName">  
+            <div *ngIf="registerForm.controls['userName'].errors" class="alert alert-danger">
+                userName field is invalid.
+                <p *ngIf="registerForm.controls['userName'].errors?.['required']">
+                    This field is required!
+                </p>                
+            </div>
             <label>Password : </label>   
-            <input type="password" placeholder="Enter Password" name="password" [(ngModel)] = "user[0].password"required>  
+            <input type="password" placeholder="Enter Password" name="password" [(ngModel)] = "user[0].password"required formControlName="password">  
+            <div *ngIf="registerForm.controls['lastName'].errors" class="alert alert-danger">
+            Lastname field is invalid.
+            <p *ngIf="registerForm.controls['lastName'].errors?.['required']">
+                This field is required!
+            </p>                
+        </div>
             <button type="submit" (click)="loginUser()">Login</button>   
             <input type="checkbox" checked="checked"> Remember me   
             <button type="button" class="cancelbtn"> Cancel</button>   
@@ -15,3 +27,4 @@
 </body>
 
 </html>
+
